tdf#164871 sw: Implemented exact and at-least line spacing for grid

Previously, paragraphs snapped to CJK grid allowed proportional line
spacing, but did not allow either exact or at-least line spacing. These
other line spacing types had not been implemented.

Change-Id: I4c07876ab4f9881899bcc2ebb8b64019141bf988
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181508
Tested-by: Jenkins
Reviewed-by: Jonathan Clark <jonathan@libreoffice.org>